Inclusão de suporte para soft delete; parser - Tratativa para método PATCH; response - Tratativas do retorno de erro e inclusão de suporte a trace; api_schemas - Tratativa para os diferentes tipos de saídas repository - Inclusão de métodos para as operações de patch e delete, tratativa do where para suportar is null; service - Inclusão de validação e novos métodos; healthcheck_manager - Separacao do uso do servico de health check em um gerenciador; exceptions - Tratativas para params de mensagens e novo tipo de exception; filter_helper - Inclusão de helper para funções de sql/xss injection; helper - Migrada função de testutils para o helper; app - Ajustada a documentação dos métodos da api
