# flambda_app/openapi/api_schemas.py
@@ -5,11 +5,11 @@ from flambda_app.http_resources.request_control import Pagination
 from flambda_app.openapi.schemas import DeletionSchema, RequestControlSchema, MetaSchema, LinkSchema, ErrorSchema
 
 
-class DefaultListResponseSchema(Schema):
-    success = fields.Bool(default=True)
-    code = fields.Int(required=True)
-    label = fields.Str()
-    message = fields.Str()
+class DefaultResponseSchema(Schema):
+    success = fields.Bool(example=True, default=True)
+    code = fields.Int(example=MessagesEnum.OK.code, required=True)
+    label = fields.Str(example=MessagesEnum.OK.label)
+    message = fields.Str(example=MessagesEnum.OK.message)
     params = fields.List(fields.Str())
 
 
@@ -32,21 +32,29 @@ class ProductSchema(Schema):
     uuid = fields.UUID(example="4bcad46b-6978-488f-8153-1c49f8a45244")
 
 
-class HateosProductListResponseSchema(DefaultListResponseSchema):
+class HateosProductListResponseSchema(DefaultResponseSchema):
     data = fields.List(fields.Nested(ProductSchema))
     control = fields.Nested(RequestControlSchema)
     meta = fields.Nested(MetaSchema)
     links = fields.List(fields.Nested(LinkSchema))
 
 
-class ProductListResponseSchema(DefaultListResponseSchema):
+class ProductListResponseSchema(DefaultResponseSchema):
     data = fields.List(fields.Nested(ProductSchema))
     control = fields.Nested(RequestControlSchema)
 
+class ProductListErrorResponseSchema(ErrorSchema):
+    code = fields.Int(example=MessagesEnum.LIST_ERROR.code, required=True)
+    label = fields.Str(example=MessagesEnum.LIST_ERROR.label)
+    message = fields.Str(example=MessagesEnum.LIST_ERROR.message)
 
 class ProductGetResponseSchema(Schema):
     data = fields.Nested(ProductSchema)
 
+class ProductGetErrorResponseSchema(ErrorSchema):
+    code = fields.Int(example=MessagesEnum.FIND_ERROR.code, required=True)
+    label = fields.Str(example=MessagesEnum.FIND_ERROR.label)
+    message = fields.Str(example=MessagesEnum.FIND_ERROR.message)
 
 class ProductCreateRequestSchema(Schema):
     sku = fields.Int(example=657705)
@@ -58,20 +66,50 @@ class ProductCreateRequestSchema(Schema):
     supplier_id = fields.Int(example=1)
     active = fields.Int(validate=validate.OneOf([0, 1]))
 
-class ProductCreateResponseSchema(Schema):
-    pass
 
-class ProductCreateErrorResponseSchema(Schema):
-    pass
+class ProductCreateResponseSchema(DefaultResponseSchema):
+    data = fields.Nested(ProductSchema)
+
+
+class ProductCreateErrorResponseSchema(ErrorSchema):
+    code = fields.Int(example=MessagesEnum.CREATE_ERROR.code, required=True)
+    label = fields.Str(example=MessagesEnum.CREATE_ERROR.label)
+    message = fields.Str(example=MessagesEnum.CREATE_ERROR.message)
+
 
 class ProductCompleteUpdateRequestSchema(ProductCreateRequestSchema):
     pass
 
-class ProductUpdateResponseSchema(Schema):
+
+class ProductUpdateResponseSchema(ProductCreateResponseSchema):
     pass
 
-class ProductUpdateErrorResponseSchema(Schema):
-    pass
+
+class ProductUpdateErrorResponseSchema(ErrorSchema):
+    code = fields.Int(example=MessagesEnum.UPDATE_ERROR.code, required=True)
+    label = fields.Str(example=MessagesEnum.UPDATE_ERROR.label)
+    message = fields.Str(example=MessagesEnum.UPDATE_ERROR.message)
+
+
+class ProductSoftUpdateRequestSchema(Schema):
+    field = fields.Str(example="value")
+
+
+class ProductSoftDeleteResponseSchema(DefaultResponseSchema):
+    data = fields.Dict(example={"deleted": True})
+
+class ProductDeleteResponseSchema(Schema):
+    data = fields.Dict(example={"deleted": True})
+
+class ProductSoftDeleteErrorResponseSchema(ErrorSchema):
+    code = fields.Int(example=MessagesEnum.SOFT_DELETE_ERROR.code, required=True)
+    label = fields.Str(example=MessagesEnum.SOFT_DELETE_ERROR.label)
+    message = fields.Str(example=MessagesEnum.SOFT_DELETE_ERROR.message)
+
+class ProductDeleteErrorResponseSchema(ErrorSchema):
+    code = fields.Int(example=MessagesEnum.DELETE_ERROR.code, required=True)
+    label = fields.Str(example=MessagesEnum.DELETE_ERROR.label)
+    message = fields.Str(example=MessagesEnum.DELETE_ERROR.message)
 
 # ***************************
 # Event
@@ -99,7 +137,7 @@ class EventUpdateRequestSchema(EventCreateRequestSchema):
     pass
 
 
-class EventListResponseSchema(DefaultListResponseSchema):
+class EventListResponseSchema(DefaultResponseSchema):
     data = fields.List(fields.Nested(EventSchema))
     control = fields.Nested(RequestControlSchema)
     meta = fields.Nested(MetaSchema)
