# public/swagger/openapi.yml
@@ -97,7 +97,29 @@ components:
           type: integer
       type: object
     ProductCreateErrorResponse:
-      properties: {}
+      properties:
+        code:
+          example: 17
+          type: integer
+        details:
+          type: string
+        label:
+          example: common.error.create_error
+          type: string
+        message:
+          example: Unable to create the record
+          type: string
+        params:
+          items:
+            type: string
+          type: array
+        success:
+          example: false
+          type: boolean
+        trace:
+          type: string
+      required:
+      - code
       type: object
     ProductCreateRequest:
       properties:
@@ -125,16 +147,87 @@ components:
           type: integer
       type: object
     ProductCreateResponse:
-      properties: {}
+      properties:
+        code:
+          example: 1
+          type: integer
+        data:
+          $ref: '#/components/schemas/Product'
+        label:
+          example: common.success
+          type: string
+        message:
+          example: Success
+          type: string
+        params:
+          items:
+            type: string
+          type: array
+        success:
+          example: true
+          type: boolean
+      required:
+      - code
+      type: object
+    ProductGetErrorResponse:
+      properties:
+        code:
+          example: 14
+          type: integer
+        details:
+          type: string
+        label:
+          example: common.error.find_error
+          type: string
+        message:
+          example: Unable to find the record
+          type: string
+        params:
+          items:
+            type: string
+          type: array
+        success:
+          example: false
+          type: boolean
+        trace:
+          type: string
+      required:
+      - code
       type: object
     ProductGetResponse:
       properties:
         data:
           $ref: '#/components/schemas/Product'
       type: object
+    ProductListErrorResponse:
+      properties:
+        code:
+          example: 11
+          type: integer
+        details:
+          type: string
+        label:
+          example: common.error.list_error
+          type: string
+        message:
+          example: Unable to return the list data, please review your request
+          type: string
+        params:
+          items:
+            type: string
+          type: array
+        success:
+          example: false
+          type: boolean
+        trace:
+          type: string
+      required:
+      - code
+      type: object
     ProductListResponse:
       properties:
         code:
+          example: 1
           type: integer
         control:
           $ref: '#/components/schemas/RequestControl'
@@ -143,23 +236,124 @@ components:
             $ref: '#/components/schemas/Product'
           type: array
         label:
+          example: common.success
           type: string
         message:
+          example: Success
           type: string
         params:
           items:
             type: string
           type: array
         success:
+          example: true
           type: boolean
       required:
       - code
       type: object
+    ProductSoftDeleteErrorResponse:
+      properties:
+        code:
+          example: 18
+          type: integer
+        details:
+          type: string
+        label:
+          example: common.error.update_error
+          type: string
+        message:
+          example: Unable to update the record
+          type: string
+        params:
+          items:
+            type: string
+          type: array
+        success:
+          example: false
+          type: boolean
+        trace:
+          type: string
+      required:
+      - code
+      type: object
+    ProductSoftDeleteResponse:
+      properties:
+        code:
+          example: 1
+          type: integer
+        data:
+          example:
+            deleted: true
+          type: object
+        label:
+          example: common.success
+          type: string
+        message:
+          example: Success
+          type: string
+        params:
+          items:
+            type: string
+          type: array
+        success:
+          example: true
+          type: boolean
+      required:
+      - code
+      type: object
+    ProductSoftUpdateRequest:
+      properties:
+        field:
+          example: value
+          type: string
+      type: object
     ProductUpdateErrorResponse:
-      properties: {}
+      properties:
+        code:
+          example: 18
+          type: integer
+        details:
+          type: string
+        label:
+          example: common.error.update_error
+          type: string
+        message:
+          example: Unable to update the record
+          type: string
+        params:
+          items:
+            type: string
+          type: array
+        success:
+          example: false
+          type: boolean
+        trace:
+          type: string
+      required:
+      - code
       type: object
     ProductUpdateResponse:
-      properties: {}
+      properties:
+        code:
+          example: 1
+          type: integer
+        data:
+          $ref: '#/components/schemas/Product'
+        label:
+          example: common.success
+          type: string
+        message:
+          example: Success
+          type: string
+        params:
+          items:
+            type: string
+          type: array
+        success:
+          example: true
+          type: boolean
+      required:
+      - code
       type: object
     RequestControl:
       properties:
@@ -188,6 +382,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/HealthCheck'
           description: Success response
+        '424':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HealthCheck'
+          description: Failed dependency response
+        '503':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HealthCheck'
+          description: Service unavailable response
       summary: Service Health Method
   /v1/product:
     get:
@@ -236,6 +442,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProductListResponse'
           description: Success response
+        4xx:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductListErrorResponse'
+          description: Error response
+        5xx:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductListErrorResponse'
+          description: Service fail response
       summary: Product List
     post:
       requestBody:
@@ -251,13 +469,51 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProductCreateResponse'
+          description: Success response
         4xx:
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProductCreateErrorResponse'
+          description: Error response
+        5xx:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductCreateErrorResponse'
+          description: Service fail response
       summary: Create product
   /v1/product/{uuid}:
+    delete:
+      parameters:
+      - description: Product Id
+        in: path
+        name: uuid
+        required: true
+        schema:
+          example: 4bcad46b-6978-488f-8153-1c49f8a45244
+          format: uuid
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductSoftDeleteResponse'
+          description: Success response
+        4xx:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductSoftDeleteErrorResponse'
+          description: Error response
+        5xx:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductSoftDeleteErrorResponse'
+          description: Service fail response
+      summary: Soft Product delete
     get:
       parameters:
       - description: Product Id
@@ -282,7 +538,56 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProductGetResponse'
           description: Success response
+        4xx:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductGetErrorResponse'
+          description: Error response
+        5xx:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductGetErrorResponse'
+          description: Service fail response
       summary: Product get
+    patch:
+      parameters:
+      - description: Product Id
+        in: path
+        name: uuid
+        required: true
+        schema:
+          example: 4bcad46b-6978-488f-8153-1c49f8a45244
+          format: uuid
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProductSoftUpdateRequest'
+        description: Product field to be updated
+        required: true
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductUpdateResponse'
+          description: Success response
+        4xx:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductUpdateErrorResponse'
+          description: Error response
+        5xx:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductUpdateErrorResponse'
+          description: Service fail response
+      summary: Soft product update
     put:
       parameters:
       - description: Product Id
@@ -311,6 +616,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProductUpdateErrorResponse'
+          description: Error response
+        5xx:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductUpdateErrorResponse'
+          description: Service fail response
       summary: Complete product update
 servers:
 - description: Development server
